EC-597 - Downgraded liquibase, H2 and fixed some initial failing tests